# python_fastapi_example

./: Dockerfile  README.md  docker-compose.yml
code/: main.py  pyproject.toml
